# vigie_industrie

./: .env.example  .gitignore  ARCHITECTURE.md  OPERATIONS.md  README.md  index.html  veille_assurance_personnes_canada_2025.html
app/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
pipeline/: pyproject.toml
pipeline/src/vigie_pipeline/: __init__.py  __main__.py  acquire.py  cli.py  config.py  discovery.py  exceptions.py  fetch.py  freshness.py  hashing.py  merge.py  models.py  news.py  normalize.py  overrides.py  publish.py  quality.py  settings.py  validate.py
pipeline/src/vigie_pipeline/llm/: __init__.py  anthropic_provider.py  base.py  no_llm_provider.py
pipeline/src/vigie_pipeline/publishers/: __init__.py  base.py  github_pages.py
pipeline/src/vigie_pipeline/sources/: __init__.py  base.py  generic_ir.py  great_west.py  ia.py  manulife.py  sunlife.py
pipeline/tests/: conftest.py  test_config.py  test_discovery_sources.py  test_fetch.py  test_financial_acquisition.py  test_llm_provider.py  test_merge_overrides.py  test_mixed_extraction_trace.py  test_models_migration.py  test_news.py  test_normalize.py  test_period_freshness.py  test_quality_publish_offline.py  test_validate.py  test_workflows.py
pipeline/tests/fixtures/: financial-index-metrics.html  financial-index-mixed.html  financial-new-valid.html  financial-old-invalid.html  metrics.html  multi-year-periods.json  news-article.html  news-index.html  source-index-modified.html  source-index.html
(+46 files in other folders)
