[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "vigie-pipeline"
version = "2.0.0"
description = "Pipeline d’acquisition de la vigie canadienne de l’assurance de personnes"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.54,<1",
  "beautifulsoup4>=4.13,<5",
  "httpx>=0.28,<1",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.9,<3",
  "pypdf>=5.6,<6",
  "PyYAML>=6.0,<7",
  "tenacity>=9.1,<10",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.16,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "pytest-httpx>=0.35,<1",
  "ruff>=0.12,<1",
  "types-PyYAML>=6.0,<7",
]

[project.scripts]
vigie-pipeline = "vigie_pipeline.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vigie_pipeline"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["RUF001", "RUF002"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src"]

[tool.coverage.run]
source = ["vigie_pipeline"]
